# Nota

./: .gitignore  Makefile  README.md  install.sh  stack.yaml
Intactus/: Intactus.cabal  Model.hs
Intactus.hsproj/: .uuid
Intactus.hsproj/nota/: Intactus.cabal  Main.hs  Model.hs  _Model.hsplay
Intactus.hsproj/nota/Language/Lexer/: Main.hs  Types.hs
Intactus.hsproj/nota/REPL/: Main.hs  Terminal.hs  _Main.hsplay
Intactus.hsproj/nota/REPL/Text/: Boxes.hs  Tools.hs  _Tools.hsplay
Intactus/Infrastructure/: Test.hs
Intactus/Infrastructure/Text/: Layout.hs  Tools.hs
Intactus/Infrastructure/Text/Shapes/: Boxes.hs  Brackets.hs  Types.hs
Intactus/Language/FrontEnd/: Parser.hs  Types.hs
Intactus/Language/Renderer/: Main.hs
Intactus/Language/Renderer/Nodes/: Assignment.hs  BinaryOperator.hs  FunctionCall.hs  Identifier.hs  Number.hs  Parenthesis.hs  Versus.hs
Intactus/REPL/: Main.hs  Runner.hs  Terminal.hs
Intactus/Renderer/: Test.hs
Intactus/Renderer/Text/: Layout.hs  Tools.hs
Intactus/Renderer/Text/Shapes/: Boxes.hs
designs/: header.monopic
docs/: language.monopic
source/: Exception.hs  Main.hs  Model.hs  Nota.cabal
source/Infrastructure/Text/: Layout.hs  Tools.hs
source/Infrastructure/Text/Shapes/: Brackets.hs  Presets.hs  Table.hs
source/Language/BackEnd/Evaluator/: Main.hs  Types.hs
source/Language/BackEnd/Evaluator/Nodes/: Assignment.hs  BinaryOperator.hs  FunctionCall.hs  Identifier.hs  Negation.hs  Versus.hs
source/Language/BackEnd/Renderer/: Main.hs
source/Language/BackEnd/Renderer/Nodes/: Assignment.hs  BinaryOperator.hs  FunctionCall.hs  Identifier.hs  Negation.hs  Number.hs  Parenthesis.hs  Versus.hs
source/Language/Executioner/: Main.hs  Types.hs
source/Language/FrontEnd/: AST.hs  Parser.hs
source/Language/Renderer/: Main.hs
source/Language/Renderer/Nodes/: Assignment.hs  BinaryOperator.hs  FunctionCall.hs  Identifier.hs  Number.hs  Parenthesis.hs  Versus.hs
source/REPL/: Main.hs  Runner.hs  Terminal.hs
source/orchestras/: number-rounder.orchestra
