name: Intactus
version: 1.0
cabal-version: 1.22
build-type: Simple
license: MPL-2.0
copyright: Copyright (c) 2018–present by Pouya Kary <kary@gnu.org>
maintainer: Pouya Kary
stability: experimental
homepage: github.com/pmkary/intactus
bug-reports: github.com/pmkary/intactus/issues/new
synopsis: The most beautiful command line calculator
category: scientific
author: Pouya Kary
x-ghc-framework-version: 8.0.2-9.6-1
x-last-ide-version: HfM1.6.0

executable intactus
    main-is: Main.hs
    build-depends:
        split -any,
        base -any,
        scientific -any
    default-language: Haskell2010
    build-depends: base >=4.7, bytestring, array
    other-modules:
        Model
        REPL.Main
        REPL.Terminal
        Renderer.Test
        Renderer.Text.Tools
        Renderer.Text.Shapes.Boxes
        Renderer.Text.Layout
        Language.FrontEnd.Parser
        Language.FrontEnd.Types
        Language.Test