name: Nota
version: 1.0
cabal-version: 1.22
build-type: Simple
license: MPL-2.0
copyright: Copyright (c) 2018–present by Pouya Kary <kary@gnu.org>
maintainer: Pouya Kary
stability: experimental
homepage: github.com/pmkary/nota
bug-reports: github.com/pmkary/nota/issues/new
synopsis: The most beautiful command line calculator
category: scientific
author: Pouya Kary
x-ghc-framework-version: 8.0.2-9.6-1
x-last-ide-version: HfM1.6.0

executable nota
    main-is: Main.hs
    build-depends:
        base >=4.7,
        bytestring,
        array,
        split -any,
        scientific -any,
        parsec >=3.1.11,
        ansi-terminal >=0.6.3.1,
        regex-compat >=0.95.1,
        containers >=0.5.7.1,
        terminal-size >=0.3.2.1
    default-language: Haskell2010
    other-modules:
        Infrastructure.Text.Layout
        Infrastructure.Text.Shapes.Boxes
        Infrastructure.Text.Shapes.Brackets
        Infrastructure.Text.Shapes.Presets
        Infrastructure.Text.Shapes.Types
        Infrastructure.Text.Tools
        Language.FrontEnd.Parser
        Language.FrontEnd.AST
        Language.BackEnd.Renderer.Main
        Language.BackEnd.Renderer.Nodes.Assignment
        Language.BackEnd.Renderer.Nodes.BinaryOperator
        Language.BackEnd.Renderer.Nodes.FunctionCall
        Language.BackEnd.Renderer.Nodes.Identifier
        Language.BackEnd.Renderer.Nodes.Number
        Language.BackEnd.Renderer.Nodes.Parenthesis
        Language.BackEnd.Renderer.Nodes.Versus
        Model
        REPL.Main
        REPL.Runner
        REPL.Terminal